# sorang

./: README.md
host_pc/: CMakeCache.txt  CMakeLists.txt  Makefile  clean.sh  cmake_install.cmake  main  main.c  rk3399_run.sh  run.sh  ssh.sh  test.glade  upload.sh
host_pc/argument/: argu.c  argu.h
host_pc/cmd/: cmd.c  cmd.h
host_pc/com/: poll.c  poll.h  tcpip.c  tcpip.h  uart.c  uart.h
host_pc/display/: display.c  display.h
host_pc/include/: main.h
host_pc/lidar/: lidar_law.c  lidar_law.h
host_pc/motor/: motor.c
host_pc/move/: move.c
host_pc/teminel_key/: esc_key.c  esc_key.h
host_pc/timer/: timer.c  timer.h
